<resources>
    <string name="app_name">Kakeibify</string>
    <string name="income">Ingresos</string>
    <string name="outcome">Gastos</string>
    <string name="description">Descripción</string>
    <string name="titulo">Título</string>
    <string name="repeat">Repetir</string>
    <string name="every">Cada</string>
    <string name="to_outcome">Gastar</string>
    <string name="to_income">Ingresar</string>
    <string name="send">Guardar</string>
    <string name="date_format">EEEE, dd \'de\' MMM \'de\' yyyy</string>
    <string name="datetime_format">EEEE, dd \'de\' MMM \'de\' yyyy \'a las\' HH:mm</string>
    <string name="add">Agregar</string>
    <string name="add_category">Agregar categoría</string>
    <string name="total">Total</string>
    <string name="select_day_message">Selecciona que día de cada mes quieres empezar las cuentas:</string>
    <string name="start_categories_message">Agrega algunas categorías en las que puedas clasificar tus ingresos y tus gastos:</string>
    <string name="logo">家計簿</string>
    <string name="next">Siguiente</string>
    <string name="finish">Finalizar</string>
    <string name="notify_end_day">Avisame al final del día para repasar mis cuentas.</string>
    <string name="notify_offlimit">Activar las notificaciones cuando excedo del límite en algún gasto.</string>
    <string name="notify_end_month">Avísame al terminar el mes.</string>
    <string name="notify_promises">Recuérdame mis promesas.</string>
    <string name="save">Guardar</string>
    <string name="notification_title_endday">Recuerda apuntar tus cuentas del día</string>
    <string name="notification_content_endday">Sientate tranquilamente y apunta si hoy has hecho algún gasto o ingreso. Sino, ¡Que pases un buen día!</string>
    <string name="notification_title_endmonth">Recuerda revisar tus cuentas de este mes</string>
    <string name="notification_content_endmonth">Está apunto de terminar este mes. Sientate, revisa tus movimientos y comprueba cuanto has conseguido ahorrar, sino, seguimos estando aquí para ayudarte.</string>
    <string name="limit">Limitar</string>
    <string name="delete">Borrar</string>
    <string name="confirm_delete_category">¿Estás seguro que quieres borrar esta categoría?</string>
    <string name="confirm_delete_amount">¿Estás seguro que quieres borrar esta cantidad?</string>
    <string name="notification_title_offlimit">Te has pasado del límite en %1$s.</string>
    <string name="notification_content_offlimit">Has rebasado el límite de %1$f en la categoría de %2$s</string>

    <string-array name="menu">
        <item>Dashboard</item>
        <item>Meses</item>
        <item>Categorías</item>
        <item>Inicio de mes</item>
        <item>Notificaciones</item>

    </string-array>
    <string-array name="periods">
        <item>día/s</item>
        <item>semana/s</item>
        <item>mes/es</item>
        <item>año/s</item>
    </string-array>

    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string-array name="weeks">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="months">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="years">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    
    <integer-array name="category_colors">
        <item>@drawable/bkg_category1</item>
        <item>@drawable/bkg_category2</item>
        <item>@drawable/bkg_category3</item>
        <item>@drawable/bkg_category4</item>
        <item>@drawable/bkg_category5</item>
        <item>@drawable/bkg_category6</item>
        <item>@drawable/bkg_category7</item>
        <item>@drawable/bkg_category8</item>
        <item>@drawable/bkg_category9</item>
    </integer-array>
</resources>
