<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/start_categories_message"
                android:layout_marginBottom="@dimen/margin"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/income"
                android:layout_marginBottom="@dimen/margin"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_income"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/outcome"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginTop="@dimen/margin"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_outcome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
    </LinearLayout>

    <TextView
            android:id="@+id/btn_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="@dimen/text_size_big"
            android:gravity="center"
            style="@style/LinkStyle"
            android:padding="@dimen/padding"
            android:text="@string/next"/>


</LinearLayout>