<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding">

            <CheckBox
                    android:id="@+id/chk_endday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/notify_end_day"
                    android:gravity="top"
                    android:layout_marginBottom="@dimen/margin"/>

            <TextView
                    android:id="@+id/tv_endday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/LinkStyle"
                    android:text="00:00"
                    android:visibility="gone"
                    android:layout_marginBottom="@dimen/margin"/>

            <CheckBox
                    android:id="@+id/chk_offlimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/notify_offlimit"
                    android:gravity="top"
                    android:layout_marginBottom="@dimen/margin"/>

            <CheckBox
                    android:id="@+id/chk_endmonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/notify_end_month"
                    android:gravity="top"
                    android:layout_marginBottom="@dimen/margin"/>

            <CheckBox
                    android:id="@+id/chk_promises"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/notify_promises"
                    android:gravity="top"
                    android:layout_marginBottom="@dimen/margin"/>

            <com.alavpa.spendify.ui.custom.widgets.period.PeriodWidget
                    android:id="@+id/w_period"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>

    <TextView
            android:id="@+id/btn_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="@dimen/text_size_big"
            android:gravity="center"
            style="@style/LinkStyle"
            android:padding="@dimen/padding"
            android:text="@string/finish"/>


</LinearLayout>